# HackKU26

./: .gitignore  Makefile  README.md
.github/workflows/: build-deploy.yml
game/: Makefile  bin
game/assets/: sample_dungeon.txt
game/assets/dungeons/: 1  10  100  1000  10000  1001  1002  1003  1004  1005  1006  1007  1008  1009  101  1010  1011  1012  1013  1014  1015  1016  1017  1018  1019  102  1020  1021  1022  1023  1024  1025  1026  1027  1028  1029  103  1030  1031  1032  (+9960 more)
game/html/: index.html
game/include/: dungeon.h  enemy.h  player.h  sfx.h  tiles.h
game/src/: dungeon.c  enemy.c  main.c  player.c  sfx.c  tiles.c
server/: Cargo.toml  Containerfile
server/crates/dungeon_gen/: Cargo.toml
server/crates/dungeon_gen/examples/: generate_dungeon.rs  paper_validation.rs
server/crates/dungeon_gen/src/: content.rs  evolution.rs  fitness.rs  grid.rs  layout.rs  lib.rs  pathfinding.rs  rng.rs  room.rs  tests.rs  tree.rs
server/src/: main.rs  routes.rs
